# password-generator-pyqt6

./: pyproject.toml
passwordgen_pyqt6/: __init__.py  controller.py  gui.py
tests/: test_passwordgen_pyqt6.py
