[tool.poetry]
name = "passwordgen-pyqt6"
version = "0.1.0"
description = ""
authors = ["tigad049 <tigad049@hsd.k12.or.us>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"
numpy = "^1.24.3"
pyclip = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
